# swaystatus

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  testconfig
alsa/: Cargo.toml
alsa/src/: communication.rs  config.rs  lib.rs  runnable.rs
alsa/src/communication/: pipe_chan.rs
clock/: Cargo.toml
clock/src/: lib.rs
formatable-float/: Cargo.toml
formatable-float/src/: lib.rs
pulse/: Cargo.toml
pulse/src/: communication.rs  config.rs  lib.rs  runnable.rs
pulse/src/runnable/: mod.rs  pulse.rs
src/: config.rs  main.rs  module_communication.rs
swaystatus/: Cargo.toml
swaystatus-plugin/: .gitignore  Cargo.toml
swaystatus-plugin/src/: lib.rs
swaystatus/src/: main.rs  test_plugin.rs
swaystatus/src/commandline/: mod.rs
swaystatus/src/communication/: mod.rs
swaystatus/src/config/: custom_deserializers.rs  mod.rs  tests.rs
swaystatus/src/plugin_database/: mod.rs  test_helper.rs
swaystatus/src/signalhandler/: mod.rs
swaystatus/translations/: de.po  messages.po
