[package]
name = "swaystatus"
version = "0.1.0"
authors = ["Andreas Grois <andi@grois.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
gettext-rs = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
