[package]
name = "swaystatus-pulse"
version = "0.1.0"
authors = ["Andreas Grois <andi@grois.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swaystatus-plugin = { path = '../swaystatus-plugin', version = '*'}
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
libc = "0.2.0"

[lib]
crate-type = ["cdylib"]
