[package]
name = "swaystatus"
version = "0.1.0"
authors = ["Andreas Grois <andi@grois.info>"]
edition = "2021"
description = "Fully modular status bar text updater, similar to i3bar."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
toml = "0.5"
libloading = "0.7"
signal-hook = { version = "0.3", default-features = false, features = ["iterator"]}
clap = { version = "3.0.0-beta.2", default-features = false, features = ["std", "cargo", "wrap_help"] }
dirs = "3.0"

swaystatus-plugin = { path = '../swaystatus-plugin', version = '*'}

[build-dependencies]
rustc_version = "0.2.3"

#[dev-dependencies]
#mockall = "0.9.1"
